--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,29 +6,44 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[features]
-default = []
-vulkan = ["wgc/gfx-backend-vulkan"]
-
 [dependencies]
 wgpu = "0.5.0"
-imgui = "0.3.0"
 winit = "0.21.0"
 glsl-to-spirv = "0.1.7"
 tobj = "1.0.0"
 futures = "0.3"
+imgui = "0.3.0"
+imgui-wgpu = "0.6.0"
+imgui-winit-support = "*"
 
 [build-dependencies]
 glsl-to-spirv = "0.1.7"
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgc]
+[dependencies.wgn]
+package = "wgpu-native"
+version = "0.5"
+#git = "https://github.com/gfx-rs/wgpu"
+
+[dependencies.wgc]
 package = "wgpu-core"
 version = "0.5"
-git = "https://github.com/gfx-rs/wgpu"
-rev = "5c172dd4756aa152b4f3350e624d7b1b5d24ddda"
+#git = "https://github.com/gfx-rs/wgpu"
 
 [dependencies.wgt]
 package = "wgpu-types"
 version = "0.5"
-git = "https://github.com/gfx-rs/wgpu"
-rev = "5c172dd4756aa152b4f3350e624d7b1b5d24ddda"
+#git = "https://github.com/gfx-rs/wgpu"
+
+# [patch.crates-io]
+# wgpu-types = { version = "0.5.0", path = "../wgpu/wgpu-types" }
+# wgpu-core = { version = "0.5.0", path = "../wgpu/wgpu-core" }
+# wgpu-native = { version = "0.5.0", path = "../wgpu/wgpu-native" }
+
+# [patch.crates-io]
+# # gfx-hal = { version = "0.5.0", path = "../gfx/src/hal" }
+# # gfx-backend-empty = { version = "0.5.0", path = "../gfx/src/backend/empty" }
+# gfx-backend-vulkan = { version = "0.5.0", path = "../gfx/src/backend/vulkan" }
+# # gfx-backend-dx12 = { version = "0.5.0", path = "../gfx/src/backend/dx12" }
+# # gfx-backend-dx11 = { version = "0.5.0", path = "../gfx/src/backend/dx11" }
+# # gfx-descriptor = { version = "0.1.0", path = "../gfx-extras/gfx-descriptor" }
+# # gfx-memory = { version = "0.1.0", path = "../gfx-extras/gfx-memory" }
