--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ winit = "0.21.0"
 glsl-to-spirv = "0.1.7"
 tobj = "1.0.0"
 futures = "0.3"
-imgui = "0.3.0"
-imgui-wgpu = "0.6.0"
-imgui-winit-support = "*"
+# glm = "0.2.3"
+zerocopy = "0.3"
+# imgui = "0.3.0"
+# imgui-wgpu = "0.6.0"
+# imgui-winit-support = "*"
 
 [build-dependencies]
 glsl-to-spirv = "0.1.7"
