--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tobj = "1.0.0"
 futures = "0.3"
 glm = "0.2.3"
 zerocopy = "0.3"
+png = "0.15"
 # imgui = "0.3.0"
 # imgui-wgpu = "0.6.0"
 # imgui-winit-support = "*"
